@@ -169,6 +169,7 @@ CSettings::CSettings(void)
   g_advancedSettings.m_lcdAddress4 = 0x54;
 
   g_advancedSettings.m_autoDetectPingTime = 30;
+  g_advancedSettings.m_playCountMinimumPercent = 90.0f;
 
   xbmcXmlLoaded = false;
 }
@@ -1362,6 +1363,11 @@ bool CSettings::LoadSettings(const CStdString& strSettingsFile, const bool loadp
   {
     GetInteger(pElement, "autodetectpingtime", g_advancedSettings.m_autoDetectPingTime, 30, 1, 240);
   }
+  pElement = pRootElement->FirstChildElement("PlaybackSettings");
+  if (pElement)
+  {
+    GetFloat(pElement, "playcountminimumpercent", g_advancedSettings.m_playCountMinimumPercent, 10.0f, 1.0f, 100.0f);
+  }
   // my programs
   pElement = pRootElement->FirstChildElement("myprograms");
   if (pElement)
@@ -1617,6 +1623,11 @@ bool CSettings::SaveSettings(const CStdString& strSettingsFile, const bool savep
   pNode = pRoot->InsertEndChild(networkNode);
   if (!pNode) return false;
   SetInteger(pNode, "autodetectpingtime", g_advancedSettings.m_autoDetectPingTime);
+
+  TiXmlElement playbackNode("PlaybackSettings");
+  pNode = pRoot->InsertEndChild(playbackNode);
+  if (!pNode) return false;
+  SetFloat(pNode, "playcountminimumpercent", g_advancedSettings.m_playCountMinimumPercent);
 
   // default video settings
   TiXmlElement videoSettingsNode("DefaultVideoSettings");
